# EventManagementProgram-backend

./: pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routes/: CustomerRoutes.py  __init__.py
app/core/: config.py  database.py
app/models/: CustomerModel.py  EventCategoryModel.py  EventDateTimeModel.py  OrganizerModel.py  VenueModel.py  __init__.py
