[project]
name = "eventmanagementprogram-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.10",
    "fastapi[standard]>=0.121.1",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.4",
    "sqlalchemy[asyncio]>=2.0.44",
]
